objects/Plan__c.object
<CustomObject>
    <description>To capture all the plans related to products - Loaded from BlueStar</description>
    <fields>
        <fullName>Benefit_Agreement_Rule_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the plan a benefit agreement rule indicator</description>
        <label>Benefit Agreement Rule Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Product_Effective_Date__c</fullName>
        <description>Product Effective Date of the Plan</description>
        <label>Corporate Product Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCSC_Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endorsement_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The endorsment indicator of the plan if endorsement indicator is needed or not</description>
        <label>Endorsement Indicator?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External id for integration with BlueStar.</description>
        <externalId>true</externalId>
        <inlineHelpText>REQUIRED for user to submit plan to BlueSTAR must be the corp plan ID from BlueSTAR</inlineHelpText>
        <label>Plan Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FipsCodes__c</fullName>
        <label>FipsCodes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HCR_Compliance_Code__c</fullName>
        <description>HCR Compliance code for the plan</description>
        <label>HCR Compliance Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSA_Contribution__c</fullName>
        <label>HSA Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_All_Copay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is All Copay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_HSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is HSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level2_Sort_Order__c</fullName>
        <label>Level2 Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_1_Product_Name__c</fullName>
        <label>Level 1 Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_1_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 1 Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Plans (Level 1 Product)</relationshipLabel>
        <relationshipName>Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_1_Sort_Order__c</fullName>
        <label>Level 1 Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_2_Product_Name__c</fullName>
        <label>Level 2 Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level 2 Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Plans (Level 2 Product)</relationshipLabel>
        <relationshipName>Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Of_BusinessNO__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Of Business (no use)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Of_Business__c</fullName>
        <label>Line Of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>HDL</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MappedPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mapped Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Mapped_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mapped_Plan_Name__c</fullName>
        <label>Mapped Plan Name</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_ID_del__c</fullName>
        <description>duplicate</description>
        <label>Marketing Plan ID(No use)</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Number__c</fullName>
        <description>Marketing Plan number of the plan</description>
        <label>Marketing Plan Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Sales_Plan_ID__c</fullName>
        <formula>Marketing_Plan_Number__c &amp; &apos;/&apos; &amp; Plan_Sales_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing/Sales Plan ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Premium__c</fullName>
        <formula>Value(&quot;SGR_Opportunity_Plan_Rate__r.Member_Premium__c&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Premium</label>
        <precision>18</precision>
        <scale>16</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Network_Code__c</fullName>
        <description>Network Code of the plan</description>
        <label>Network Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_PlanGroup_Ext_Id__c</fullName>
        <label>Parent PlanGroup Ext Id (no Use)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Plan_Group_Id__c</fullName>
        <label>Parent Plan Group Id (no Use)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Group_End_Date__c</fullName>
        <label>Plan Group End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Group_Level1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Group Level1 (no use)</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Plans (Plan Group Level1)</relationshipLabel>
        <relationshipName>Plans11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Group_Level2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Group Level2 (No use)</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Plans (Plan Group Level2)</relationshipLabel>
        <relationshipName>Plans22</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Group_Level3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Group Level3 (no Use)</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Plans (Plan Group Level3)</relationshipLabel>
        <relationshipName>Plans33</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Group_Start_Date__c</fullName>
        <label>Plan Group Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Group(no Use)</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>SGR Plans</relationshipLabel>
        <relationshipName>SGRPlans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Level__c</fullName>
        <label>Metallic</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Sales_ID__c</fullName>
        <externalId>true</externalId>
        <label>Plan Sales ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <description>Type of plan in BlueStar.</description>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PDent</fullName>
                </value>
                <value>
                    <fullName>VGDent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>TEXT(Product__r.Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Codes__c</fullName>
        <label>Product Group Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>SGR_Product_Group__c</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>SG_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product the Plan is related</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <formula>IF(ISPICKVAL(Line_Of_Business__c,&apos;V&apos;) ,&apos;Per Member Per Month&apos;,&apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retired_Date__c</fullName>
        <label>Retired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Product__r.HCSC_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HCSC State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product Status Code of the Plan</description>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>External_Id__c</columns>
        <columns>Division__c</columns>
        <columns>Product__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Product_Group_Codes__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <recordTypes>
        <fullName>SG_Plans</fullName>
        <active>true</active>
        <label>SG Plans</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>